Uradjeno upravljanje proizvodima, upravljanje korisnicima i pretraga proizvoda