@@ -4,13 +4,18 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.vts.prodavnicaobuce.dto.ProizvodDTO;
+import com.vts.prodavnicaobuce.dto.ProizvodUpdateDTO;
 import com.vts.prodavnicaobuce.model.Kategorija;
 import com.vts.prodavnicaobuce.model.Proizvod;
 import com.vts.prodavnicaobuce.repository.KategorijaRepository;
@@ -31,11 +36,11 @@ public class ProizvodController {
     }
 
     @GetMapping
-    public List<ProizvodDTO> getAllProizvodi() {
-        return proizvodService.getAllProizvodi()
+    public List<ProizvodDTO> sviProizvodi() {
+        return proizvodService.sviAktivni()
                 .stream()
-                .map(ProizvodDTO::new)
-                .collect(Collectors.toList());
+                .map(ProizvodDTO::fromEntity)
+                .toList();
     }
     
     @PostMapping("/add")
@@ -55,5 +60,33 @@ public class ProizvodController {
         proizvodService.save(proizvod);
 
         return ResponseEntity.ok("Proizvod uspešno dodat");
+    }
+    
+    @GetMapping("/pretraga")
+    public List<ProizvodDTO> pretraga(
+            @RequestParam(required = false) String naziv,
+            @RequestParam(required = false) String kategorija,
+            @RequestParam(required = false) Double minCena,
+            @RequestParam(required = false) Double maxCena
+    ) {
+        return proizvodService.pretraga(naziv, kategorija, minCena, maxCena)
+                .stream()
+                .map(ProizvodDTO::fromEntity)
+                .toList();
+    }
+    
+    @PutMapping("/izmena/{id}")
+    public ResponseEntity<String> izmeniCenuIKolicinu(
+            @PathVariable Long id,
+            @RequestBody @Valid ProizvodUpdateDTO dto
+    ) {
+        proizvodService.izmeniCenuIKolicinu(id, dto);
+        return ResponseEntity.ok("Proizvod uspešno ažuriran");
+    }
+    
+    @DeleteMapping("obrisi/{id}")
+    public ResponseEntity<String> obrisi(@PathVariable Long id) {
+        proizvodService.obrisiProizvod(id);
+        return ResponseEntity.ok("Proizvod uspešno obrisan");
     }
 }
